--- a/AluguelDeCarros/LocateCar.csproj
+++ b/AluguelDeCarros/LocateCar.csproj
@@ -13,11 +13,13 @@
     <None Remove="View\" />
     <None Remove="Util\" />
     <None Remove="Service\Interfaces\" />
+    <None Remove="Service\TaxServices\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Service\" />
     <Folder Include="View\" />
     <Folder Include="Util\" />
     <Folder Include="Service\Interfaces\" />
+    <Folder Include="Service\TaxServices\" />
   </ItemGroup>
 </Project>
